# ground-control

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.sh
docs/: above-all-ground-routing-implementation-plan.md  airport-map-widescreen-plan.md  code-review-2026-07.md  ksba-ground-route-assumptions.md  runway-selection-policy.md
scripts/: prep_map.py  setup.sh  test_live.sh
server/: airport.py  atis.py  chart_geometry.py  ground.py  llm.py  main.py  phraseology.py  runway_selection.py  scenario.py  stt.py  tts.py
tests/: conftest.py  test_api.py  test_chart_geometry.py  test_failures.py  test_ground_routes.py  test_mission.py  test_phraseology.py  test_runway_selection.py  test_web_map.py
tests/e2e/: TEST_AREAS.md  conftest.py  test_live_mission.py  test_voice_pipeline.py
tests/js/: test_map.js
web/: app.js  audio.js  index.html  map.js  radio.js  styles.css
