[project]
name = "ground-control"
version = "0.1.0"
description = "KSBA radio communication trainer for private pilot students"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "kokoro-onnx>=0.4.9",
    "soundfile>=0.12",
    "numpy>=1.26",
    "pymupdf>=1.24",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
